# packages

net/coova-chilli/patches/: 500-fix-linux-and-allocated.patch
sky/skywifi/: CMakeLists.txt  Makefile
sky/skywifi/src/: Makefile  config.json  initd.sh  main.cpp  skywifi.cpp  skywifi.hpp
sky/skywifi/src/skylib/: settings.cpp  settings.hpp  skywifi.cpp  skywifi.hpp
sky/skywifi/src/src/: config.json
